--- a/daniel.html
+++ b/daniel.html
@@ -4,6 +4,7 @@
 <head>
   <title>Bitlab</title>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="img/favicon.png">
   <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
   <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -16,6 +17,9 @@
   <script type="text/javascript" src="assets/javascript/servicios.js"></script>
   <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
+  <meta name="author" content="Bitlab">
+  <meta name="keywords" content="Keywords">
+  <meta name="description" content="155 characters of message matching text with a call to action goes here">
 </head>
 
 
@@ -142,11 +146,10 @@
           <h3>Consultoría sin costo ni obligaciones.</h3>
           <h4> CONOCE NUESTRO
             <br>PROCESO DE TRABAJO</h4>
-            <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi
-              velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+            <p class="textproceso">Desde el comienzo del proyecto estamos comprometidos a una comunicación abierta, cooperación y colaboración, para asegurarte que obtengas lo que necesitas a un precio que puedas permitirte.</p>
             </div>
             <a href="proceso.html">
-              <div class="button" style="margin-top:15px;">Saber más</div>
+              <div class="button" style="margin-top:70px;">Saber más</div>
             </a>
           </div>
         </div>
