--- a/nosotros.html
+++ b/nosotros.html
@@ -98,7 +98,7 @@
 <!--Main-->
 <div id="fullpage">
   <div class="section mainnosotros">
-    <h1>We are bitlab</h1>
+    <h1>Somos bitlab</h1>
     <a href="#nosotroscontent">
       <img class="arrow" src="img/flecha.png" />
     </a>
@@ -110,11 +110,9 @@
       <div class="contenidoTexto contentright">
         <div class="textnosotros">
           <h1>01</h1>
-          <h4>Quienes somos</h4>
-          <h3>Conócenos un poco mas</h3>
-          <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
-            Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
-            una vida, se puede decir, poco ortográfica.</p>
+          <h4>Misión</h4>
+          <h3>Nuestro principal objetivo.</h3>
+          <p>Nuestra misión es crear herramientas tecnológicas accesibles para todos que ayuden a desarrollar el potencial de crecimiento de cada empresa por más pequeña o grande que sea. Creemos que en cada proceso hay un gran potencial que puede explotarse y llevarse al éxito.</p>
           </div>
         </div>
       </div>
@@ -123,11 +121,9 @@
         <div class="contenidoTexto contentleft">
           <div class="textnosotros">
             <h1>02</h1>
-            <h4>Quienes somos</h4>
-            <h3>Conócenos un poco mas</h3>
-            <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
-              Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
-              una vida, se puede decir, poco ortográfica.</p>
+            <h4>Visión</h4>
+            <h3>Nuestra meta.</h3>
+            <p>Ser reconocidos a nivel mundial como la empresa mexicana número uno en servicios de Tecnologías de Información.</p>
             </div>
           </div>
 
@@ -138,10 +134,8 @@
             <div class="textnosotros">
               <h1>03</h1>
               <h4>Quienes somos</h4>
-              <h3>Conócenos un poco mas</h3>
-              <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
-                Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
-                una vida, se puede decir, poco ortográfica.</p>
+              <h3>Nuestro reflejo.</h3>
+              <p>Somos una empresa mexicana que busca impulsar el desarrollo por medio de la tecnología. Más de 10 de experiencia en la industria nos respaldan.</p>
               </div>
             </div>
           </div>
@@ -152,61 +146,61 @@
             <h1>Nuestro
               <br>equipo</h1>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="dani" src="img/dani.png" />
                 <br>
                 <h1>Daniel Ávila</h1>
-                <h3>CEO & Developer</h3>
+                <h3>CEO & Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="beto" src="img/beto.png" />
                 <br>
                 <h1>Alberto Rodríguez</h1>
-                <h3>CEO & Developer</h3>
+                <h3>CEO & Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="leslie" src="img/leslie.png" />
                 <br>
                 <h1>Leslie Valencia</h1>
-                <h3>Graphic Designer</h3>
+                <h3>Diseñadora Gráfica</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <br>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="raul" src="img/raul.png" />
                 <br>
                 <h1>Raúl Amador</h1>
-                <h3>Graphic Designer</h3>
+                <h3>Diseñador Gráfico</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="erick" src="img/erick.png" />
                 <br>
                 <h1>Erick Bernal</h1>
-                <h3>Developer</h3>
+                <h3>Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="jorge" src="img/jorge.png" />
                 <br>
                 <h1>Jorge Chávez</h1>
-                <h3>Developer</h3>
+                <h3>Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <br>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="americo" src="img/person.png" />
                 <br>
                 <h1>Américo Guajardo</h1>
-                <h3>Developer</h3>
+                <h3>Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="person">
-                <img src="img/person.png" />
+                <img class="changeImage" data-name="pancho" src="img/pancho.png" />
                 <br>
                 <h1>Franciso Lumbreras</h1>
-                <h3>Developer</h3>
+                <h3>Desarrollador</h3>
                 <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
               </div>
               <div class="unetecontainer">
@@ -215,7 +209,7 @@
                     <br>nuestro
                     <br>equipo</h1>
                     <br>
-                    <div class="unetebtn">Escríbenos</div>
+                    <div class="unetebtn" onclick="toggleContact();">Escríbenos</div>
                   </div>
                 </div>
               </div>
