--- a/proceso.html
+++ b/proceso.html
@@ -108,9 +108,9 @@
       </div>
       <div class="container50">
         <div class="text">
-          <h3>Consultoría sin costo ni obligaciones.</h3>
-          <h4>El camino al éxito</h4>
-            <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+          <h3>Queremos acompañarte en el</h3>
+          <h4>camino al éxito</h4>
+            <p class="textproceso">Trabajamos a través de una extensa variedad de tecnología, teniendo en mente que la principal meta es alcanzar los objetivos y requerimentos de tu negocio con la plataforma correcta.</p>
             </div>
           </div>
           <a href="#pasos">
@@ -128,7 +128,7 @@
         <div class="contentpasos contentright">
           <h1>01</h1>
           <h4>Descubrir</h4>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+          <p class="text">Aquí es donde conocemos personalmente al cliente, bebemos un poco de café y determinamos los requerimentos del proyecto para seleccionar la tecnología apropiada.</p>
         </div>
       </div>
       <div class="stepcontainer">
@@ -138,7 +138,7 @@
         <div class="contentpasos contentleft">
           <h1>02</h1>
           <h4>Diseñar</h4>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+          <p class="text">Una vez que descubrimos, seguimos los sueños y expectativas del cliente, determinamos estilos y tendencias para crear el diseño gráfico y artístico del proyecto.</p>
         </div>
       </div>
       <div class="stepcontainer">
@@ -148,7 +148,7 @@
         <div class="contentpasos contentright">
           <h1>03</h1>
           <h4>Desarrollar</h4>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+          <p class="text">Ahora empezamos el código, construyendo un sistema de manejo fácil para el usuario y trasladando el diseño a código, teniendo una reunión semanal para asegurarnos que obtendrás exactamente lo que necesitas.</p>
         </div>
       </div>
       <div class="stepcontainer">
@@ -158,7 +158,7 @@
         <div class="contentpasos contentleft">
           <h1>04</h1>
           <h4>Celebrar</h4>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+          <p class="text">¡Es tiempo de celebrar! En el tiempo estimado obtendrás exactamente por lo que pagaste, tus ideas materializadas en una hermosa página web, sistema web o aplicación móvil.</p>
         </div>
       </div>
     </div>
@@ -168,9 +168,9 @@
     <div class="fullcontact">
       <div class="container-fullcontact">
         <div class="textform">
-          <h3>Contáctanos</3>
-            <h4>say hello!</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <h3>Contáctanos</h3>
+            <h4>¡Dinos hola!</h4>
+            <p>Deja tu proyecto en nuestras manos, queremos conocerte, envíanos un correo y te responderemos a la brevedad.</p>
             <h3 class="correo">info@bitlab.mx</h3>
           </div>
         </div>
