Proyecto mejor organizado

--- a/proceso.html
+++ b/proceso.html
@@ -23,12 +23,12 @@
       <p>Menú</p>
       <ul>
         <li>
-          <a href="daniel.html#main" onclick="toggleMenu()">
+          <a href="index.html#main" onclick="toggleMenu()">
             <span>Inicio</span>
           </a>
         </li>
         <li>
-          <a href="daniel.html#services" onclick="toggleMenu()">
+          <a href="index.html#services" onclick="toggleMenu()">
             <span>Servicios</span>
           </a>
         </li>
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li>
-          <a href="daniel.html#clients" onclick="toggleMenu()">
+          <a href="index.html#clients" onclick="toggleMenu()">
             <span>Clientes</span>
           </a>
         </li>
@@ -84,7 +84,7 @@
 
 
 <div>
-  <a href="daniel.html#main">
+  <a href="index.html#main">
     <img class="logo" src="img/bitlab.png">
   </a>
   <img class="menu" src="img/menu.png" onclick="toggleMenu()">
@@ -203,7 +203,7 @@
   </div>
   <div class="footercontent">
     <div class="footertitle">Say hello to us</div>
-    <div class="footertext">jobs@bitlab.mx</div>
+    <div class="footertext">info@bitlab.mx</div>
     <div class="footertext"><a href="#">Facebook</a></div>
     <div class="footertext"><a href="#">LinkedIn</a></div>
   </div>
